--- a/package.json
+++ b/package.json
@@ -1,20 +1,62 @@
 {
   "name": "chatroom-server",
-  "version": "1.0.0",
-  "description": "Serveur de chat en temps réel multi-plateforme",
+  "version": "2.0.0",
+  "description": "Serveur de chat en temps réel multi-plateforme avec fonctionnalités avancées",
   "main": "server.js",
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
+  },
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"Tests à implémenter\" && exit 1",
+    "lint": "echo \"Linting à implémenter\" && exit 0",
+    "clean": "rm -rf uploads/* && echo \"Dossier uploads nettoyé\"",
+    "logs": "tail -f logs/server.log"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.5",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.2"
   },
-  "keywords": ["chat", "socket.io", "realtime", "multiplatform"],
-  "author": "Votre nom",
-  "license": "MIT"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/g4bplayer83-glitch/chatroom-server.git"
+  },
+  "keywords": [
+    "chat",
+    "socket.io", 
+    "realtime",
+    "multiplatform",
+    "file-sharing",
+    "notifications",
+    "websocket",
+    "nodejs",
+    "express",
+    "render"
+  ],
+  "author": {
+    "name": "g4bplayer83",
+    "email": "votre-email@example.com"
+  },
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/g4bplayer83-glitch/chatroom-server/issues"
+  },
+  "homepage": "https://github.com/g4bplayer83-glitch/chatroom-server#readme",
+  "config": {
+    "port": "3000",
+    "host": "0.0.0.0",
+    "maxFileSize": "10MB",
+    "maxAvatarSize": "5MB",
+    "maxHistoryMessages": 100
+  },
+  "render": {
+    "buildCommand": "npm install",
+    "startCommand": "npm start"
+  }
 }
