--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chatroom-server",
-  "version": "2.0.0",
-  "description": "Serveur de chat en temps réel multi-plateforme avec fonctionnalités avancées",
+  "version": "2.7.0",
+  "description": "Serveur de chat en temps réel avec panneau admin renforcé, bans temporaires, mode privé et menu contextuel",
   "main": "server.js",
   "engines": {
     "node": ">=16.0.0",
